Adopt working Dashchan_2 source base